fix slick navs bug on ios

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -992,9 +992,10 @@ a {
     margin: 0;
   }
   .slick-prev, .slick-next {
-    margin-top: -70px;
+    height: auto;
+    margin-top: -50px;
     @include  max-sm {
-      margin-top: -80px;
+      margin-top: -60px;
     }
   }
 }
